--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
+    "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
     "postcss": "^6.0.13",
     "postcss-cssnext": "^3.0.2",
@@ -51,6 +52,7 @@
     "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-immutable-proptypes": "^2.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-toolbox": "^1.3.4"
