--- a/package.json
+++ b/package.json
@@ -24,12 +24,19 @@
   "homepage": "https://github.com/roadev/react-blog#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.7",
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-import-resolver-reactnative": "^1.0.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
@@ -53,11 +60,11 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-immutable-proptypes": "^2.1.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-toolbox": "^1.3.4",
     "redux": "^3.7.2",
-    "react-redux": "^5.0.6",
     "redux-thunk": "^2.2.0"
   }
 }
